ingress-nginx/custom/lua/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      access_by_lua_file /etc/nginx/lua-scripts/debug.lua;
spec:
  ingressClassName: nginx
  rules:
    - host: hello.k8s.orb.local
      http:
        paths:
          - backend:
              service:
                name: hello
                port:
                  number: 8080
            path: /
            pathType: Prefix
